add first setup for lineage doc UI

--- a/docs/data_catalog/data_catalog_frontend.mdx
+++ b/docs/data_catalog/data_catalog_frontend.mdx
@@ -84,6 +84,10 @@ Finally, at the bottom of Data Catalog homepage, the **Last Viewed** section sho
 
 #### SoR detail page
 
+<!---
+INSERIRE LINEAGE
+-->
+
 The SoR detail page shows the following two tabs:
 * **General**, that shows a first **Details** section with asset details about name, provider info, number of contained tables, tags and description of the asset. Moreover, below the Details, there is the **Custom Properties** section, where user can choose among the available custom properties for performing metadata enrichment. This topic is described in details in the [metadata enrichment](#metadata-enrichment) documentation section.
 * **Tables**, that shows the list of tables that belong to that SoR. By clicking on one element of the list, user enters that table detail page.
@@ -92,6 +96,10 @@ The SoR detail page shows the following two tabs:
 
 #### Table detail page
 
+<!---
+INSERIRE LINEAGE
+-->
+
 The Table detail page shows the following two tabs:
 * **General**, that shows a first **Details** section with asset details about name, its SoR name, number of table columns, tags and description of the asset. Moreover, below the Details, there is the **Custom Properties** section, where user can choose among the available custom properties for performing metadata enrichment. This topic is described in details in the [metadata enrichment](#metadata-enrichment) documentation section.
 * **Columns**, that shows the list of tables that belong to that SoR. By clicking on one element of the list, user enters that table detail page.
@@ -99,6 +107,10 @@ The Table detail page shows the following two tabs:
 ![Details of a table page](./img/table_details_page.png)
 
 #### Column detail page
+
+<!---
+INSERIRE LINEAGE
+-->
 
 The Column detail page shows a first **Details** section with asset details such as name, its table name, tags, description of the asset, and many other retrieved info. Moreover, below the Details, there is the **Custom Properties** section, where user can choose among the available custom properties for performing metadata enrichment. This topic is described in details in the [metadata enrichment](#metadata-enrichment) documentation section.
 
@@ -259,7 +271,14 @@ A modal opens showing the number and type of assets selected (SoR, table, column
 
 In particular, for each selected field, the user can choose to clear the field value on all those selected assets, or to overwrite the any already existent value with a new one set by the user during the bulk edit flow.
 
+<!---
+Inserire asset virtuali + menzione al lineage 
+-->
+
 ## Configuration
+
+<!---
+DA FARNE UNA REVIEW-->
 
 In this section is explained how the Control Plane service should be configured in order to properly satisfy the requests.
 
