--- a/docs/data_catalog/overview.mdx
+++ b/docs/data_catalog/overview.mdx
@@ -37,6 +37,10 @@ With Mia-Platform, it is possible to take advantage of the synergies with [**Fas
 
 ### Key features
 
+<!---
+INTEGRARE CON LINEAGE 
+-->
+
 Mia-Platform Data Catalog offers many powerful features for building your Data Product:
 
 * **Data Cataloging**: Organizes and collects available information about company's system of records, tables and columns, making it easy for an analyst to find and understand the data needed for a report.
@@ -98,6 +102,10 @@ Adopting Mia-Platform Data Catalog offers numerous benefits:
 
 ## Setup Mia-Platform Data Catalog
 
+<!---
+MODIFICARE QUESTO PARAGRAFO RIMUOVENDO L'AGENT
+-->
+
 Start to setup your Data Catalog Project in Mia-Platform Console.  
 Find in the Marketplace:
 
@@ -124,6 +132,10 @@ and decision-making capabilities within the organization.
 
 ## Architecture
 
+<!---
+AGGIORNARE
+-->
+
 In the diagram below is shown how the services involved in the aforementioned Marketplace components are linked together. In particular, the Data Catalog FE connects with the Open Lineage service via REST APIs to retrieve
 the necessary data. Open Lineage service reads datasets assets from the database where Data Catalog Agent has written the information about all the configured external connections.
 
@@ -136,6 +148,10 @@ The following paragraph provides useful links to go into detail about the variou
 ---
 
 ## Useful Resources
+
+<!---
+AGGIORNARE
+-->
 
 Here are some useful links to learn more about Mia-Platform Data Catalog features and configuration steps:
 
