--- a/docs/release-notes/v13.4.0.md
+++ b/docs/release-notes/v13.4.0.md
@@ -34,6 +34,9 @@ TO DO: fired when the configuration for a Project is saved
 ## Specificy the Rate limit for Endpoints' subroutes
 TO DO
 
+## Fine-Grained Access Control (only available as Closed Preview)
+TO DO
+
 ## Console
 
 ### Improvements
