--- a/docs/release-notes/v13.4.0.md
+++ b/docs/release-notes/v13.4.0.md
@@ -26,16 +26,30 @@ For more details, please refer to [the documentation](/software-catalog/manage-i
 ![software catalog add item](img/software-catalog-add-item.png)
 
 ## Create versions for your Microservice Templates & Examples
-TO DO
+
+You can now create and manage versions for Microservice Templates and Examples, enabling structured lifecycle management for these resource types as well.  
+Users can easily view and instantiate Templates and Examples at a specific version within their configuration.
 
 ## Configuration Saved webhook
-TO DO: fired when the configuration for a Project is saved
+
+"We have introduced the **Configuration Saved** webhook, which is triggered whenever the configuration for a Project is saved.  
+You can easily enable it from the dedicated Webhook section in Console.
 
 ## Specificy the Rate limit for Endpoints' subroutes
-TO DO
 
-## Fine-Grained Access Control (only available as Closed Preview)
-TO DO
+For configurations using Envoy, you can now specify the rate limits for the subroutes of your Endpoints.  
+This will allow for more granular control over rate limiting at the subroute level.
+
+## Fine-Grained Access Control in Design section
+
+:::info
+This feature is currently available as a **Closed Preview**.  
+For more information, head to the related [documentation page](/development_suite/api-console/api-design/fine-grained-access-control.md) and contact your Mia-Platform referent to learn how to enable it.
+:::
+
+We have introduced a mechanism to restrict user actions in the Design section based on roles and predefined rules.   
+Users with sufficient permissions can define granular rules to control access to specific actions, enhancing governance and security across Projects.
+In this way, if a user attempts to perform a restricted action and save a configuration that violates such rules, the system will block the action and return an error message.
 
 ## Console
 
