--- a/docs/release-notes/v13.4.0.md
+++ b/docs/release-notes/v13.4.0.md
@@ -37,7 +37,7 @@ You can easily enable it from the dedicated Webhook section in Console.
 
 ## Specificy the Rate limit for Endpoints' subroutes
 
-For configurations using Envoy, you can now specify the rate limits for the subroutes of your Endpoints.  
+For configurations using [Envoy API Gateway](/runtime_suite/envoy-api-gateway/overview.md), you can now specify the rate limits for the subroutes of your Endpoints.  
 This will allow for more granular control over rate limiting at the subroute level.
 
 ## Fine-Grained Access Control in Design section
