--- a/docs/release-notes/v13.1.2.md
+++ b/docs/release-notes/v13.1.2.md
@@ -7,6 +7,15 @@ image: "img/release-note-link-preview.png"
 
 _November 21th, 2024_
 
+## Console
+
+### Bug Fix
+
+This version addressed the following bugs:
+
+* tenant selection during project creation and default provider management for companies with manually-managed tenant identifier;
+* fixed a bug that prevented the ‘%’ character from being inserted within the Infrastructure Resources generator.
+
 ## Fast Data
 
 ### Bug Fix
