--- a/docs/release-notes/v13.4.0.md
+++ b/docs/release-notes/v13.4.0.md
@@ -185,6 +185,10 @@ This patch includes a fix to logout redirect when query parameters are set in th
 
 The version `3.7.0` of the Auth0 Client is now available, adding the support for TLS connections with Redis.
 
+#### HTTP proxy manager
+
+The new version `3.1.0` comes with a security fix which redacts sensitive headers in logs and with the new environment variable `ADDITIONAL_HEADERS_TO_REDACT` to specify additional sensitive headers to be redacted.
+
 ## How to update your Console
 
 For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `x.x.x`.
