--- a/docs/release-notes/v13.1.2.md
+++ b/docs/release-notes/v13.1.2.md
@@ -14,7 +14,7 @@ _November 21th, 2024_
 This version addressed the following bugs:
 
 * tenant selection during project creation and default provider management for companies with manually-managed tenant identifier;
-* fixed a bug that prevented the ‘%’ character from being inserted within the Infrastructure Resources generator.
+* fixed a bug that prevented to use the '%' character in a template of the Infrastructure Resources generator.
 
 ## Fast Data
 
