fixed console improvements in RN 13.4.0

--- a/docs/release-notes/v13.4.0.md
+++ b/docs/release-notes/v13.4.0.md
@@ -60,10 +60,12 @@ In this way, if a user attempts to perform a restricted action and save a config
 It is now possible, using the dedicated interface in the Design area, to define the parameters required to monitor an infrastructure resource created from scratch from the runtime area.
 
 #### Changes to Extensions are shown immediately in the Console sidebar
-TO DO
+
+We have improved the experience on managing the Extensions, making any changes made by the user immediately visible in the sidebar, with no need to manually refresh the page anymore.
 
 #### Identities search case insensitive
-TO DO: (Users, Service Accounts, Groups in the Access Management section)
+
+We have enhanced the experience when searching for specific identities (Users, Service Accounts, Groups) within the Access Management section, making the search case insensitive.
 
 ### Bug Fix
 
