fixed typos on RN 13.4.0

--- a/docs/release-notes/v13.4.0.md
+++ b/docs/release-notes/v13.4.0.md
@@ -8,9 +8,9 @@ image: "img/release-note-link-preview.png"
 _November 21th, 2024_
 
 :::info
-Mia-Platform Console v13.4.0 - Fall Release is **now in Preview** and will be generally available on December 5th.
+Mia-Platform Console v13.4.0 is **now in Preview** and will be generally available on December 5th.
 
-Console SaaS users can try out v13.4.0 - Fall Release latest improvements in Preview! Open a Service Request to ask for the creation of a sandbox Company in case you do not have access to any Company.
+Console SaaS users can try out v13.4.0 latest improvements in Preview! Open a Service Request to ask for the creation of a sandbox Company in case you do not have access to any Company.
 
 For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
 :::
@@ -32,7 +32,7 @@ Users can easily view and instantiate Templates and Examples at a specific versi
 
 ## Configuration Saved webhook
 
-"We have introduced the **Configuration Saved** webhook, which is triggered whenever the configuration for a Project is saved.  
+We have introduced the **Configuration Saved** webhook, which is triggered whenever the configuration for a Project is saved.  
 You can easily enable it from the dedicated Webhook section in Console.
 
 ## Specificy the Rate limit for Endpoints' subroutes
