--- a/docs/console/company-configuration/clusters-management/cluster-setup.mdx
+++ b/docs/console/company-configuration/clusters-management/cluster-setup.mdx
@@ -182,6 +182,8 @@ You can choose between the automatic procedure and the manual one.
         - list
   ```
 
+  After adding the necessary permissions follow this [guide](/console/design-your-projects/custom-resources/custom-resources.md) to see your custom resources inside the console
+
   ### ClusterRoleBindings
 
   Finally, we **must** associate the roles with the service account using the `ClusterRoleBindings` that can be created using the following template:
