--- a/docs/console/company-configuration/clusters-management/cluster-setup.mdx
+++ b/docs/console/company-configuration/clusters-management/cluster-setup.mdx
@@ -36,7 +36,7 @@ You can choose between the automatic procedure and the manual one.
 
   ### ClusterRole
 
-  Next, we must define the roles needed by the previously created service account. 
+  Next, make sure to define the roles needed by the previously created service account. 
   These are the minimal roles required by the Console to work.
 
   Here is the template to quickly define them:
