--- a/docs/console/company-configuration/clusters-management/cluster-setup.mdx
+++ b/docs/console/company-configuration/clusters-management/cluster-setup.mdx
@@ -161,7 +161,7 @@ You can choose between the automatic procedure and the manual one.
 
   #### Monitoring custom resources from the Console
 
-  Following these guidelines for configuring custom resources. 
+  Follow these guidelines to configure the custom resources. 
   We need to make sure that the console has the correct permissions 
   to display the information to users.
 
