--- a/docs/console/company-configuration/clusters-management/cluster-setup.mdx
+++ b/docs/console/company-configuration/clusters-management/cluster-setup.mdx
@@ -162,8 +162,8 @@ You can choose between the automatic procedure and the manual one.
   #### Monitoring custom resources from the Console
 
   Follow these guidelines to configure the custom resources. 
-  We need to make sure that the console has the correct permissions 
-  to display the information to users.
+  You need to make sure that the Console has the correct permissions 
+  to display the information to the users.
 
   Here is an example to show how to give the correct permissions to custom resource definitions:
   
