--- a/docs/console/company-configuration/clusters-management/cluster-setup.mdx
+++ b/docs/console/company-configuration/clusters-management/cluster-setup.mdx
@@ -186,7 +186,7 @@ You can choose between the automatic procedure and the manual one.
 
   ### ClusterRoleBindings
 
-  Finally, we **must** associate the roles with the service account using the `ClusterRoleBindings` that can be created using the following template:
+  Finally, make sure to associate the roles with the service account using the `ClusterRoleBindings` that can be created using the following template:
 
   ```yaml
   apiVersion: rbac.authorization.k8s.io/v1
